--- a/2023-S1-M2-IW/index.html
+++ b/2023-S1-M2-IW/index.html
@@ -713,6 +713,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 19
       - run: npm install
       - run: npm run lint</code></pre></div></div></div></section><section id="environnement_dexécution_du_ci"><h2>🤔 Environnement d&#8217;exécution du CI</h2><div class="slide-content"><div class="paragraph"><p><strong>Problème</strong> : On souhaite avoir les mêmes outils dans notre CI ainsi que dans nos environnement de développement</p></div>
 <div class="ulist"><ul><li><p>Environnement d&#8217;exécutions différents :</p><div class="ulist"><ul><li><p>Système d&#8217;exploitation ? (macOS, Windows, Ubuntu Linux, Arch Linux, etc.)</p></li><li><p>Architecture du processeur ? (Intel, AMD, ARM, PowerPC, Risc-V, etc.)</p></li><li><p>SDKs installés (quelle version de NodeJS ? et de NPM ? etc.)</p></li></ul></div></li></ul></div>
